[gd_scene load_steps=5 format=3 uid="uid://qxc2qwv3njt4"]

[ext_resource type="Script" path="res://WorldMapNodes/gameStartCharButton.gd" id="1_3gw6w"]
[ext_resource type="StyleBox" uid="uid://jqa8dgagawo1" path="res://Resources/SkillBarBoxStyle.tres" id="1_kffc5"]
[ext_resource type="Texture2D" uid="uid://nce6ksq6qacd" path="res://Sprites/Heroes/heroes-knight.png" id="2_gub75"]
[ext_resource type="LabelSettings" uid="uid://4clxhxygbncp" path="res://Resources/Fonts/LabelSettingSmallFontWhite.tres" id="3_yc5ab"]

[node name="CharButton" type="PanelContainer"]
theme_override_styles/panel = ExtResource("1_kffc5")
script = ExtResource("1_3gw6w")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="Margin/VBox"]
layout_mode = 2
text = "Character Name"
label_settings = ExtResource("3_yc5ab")

[node name="CharacterIcon" type="TextureRect" parent="Margin/VBox"]
layout_mode = 2
texture = ExtResource("2_gub75")
expand_mode = 4
stretch_mode = 3

[node name="Button" type="Button" parent="Margin"]
layout_mode = 2
flat = true

[connection signal="pressed" from="Margin/Button" to="." method="_on_button_pressed"]
